--- a/cluster/client/html/style.css
+++ b/cluster/client/html/style.css
@@ -33,11 +33,11 @@ button {
     padding: 7px 10px;
     border: solid 1px #666;
     border-radius: 4px;
-    transition: 0.5s all;
+    transition: 0.1s all;
 }
 
 button:hover {
-    background-color: #555;
+    background-color: #f1f1f1;
     cursor: pointer;
 }
 
